src/assets/styles/styles.css
/* imports */

@font-face {
	font-family: 'proxima_nova_rgregular';
	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'proxima_nova_rgbold';
	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot');
	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
    url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.woff') format('woff'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.ttf') format('truetype'),
		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold') format('svg');
	font-weight: normal;
	font-style: normal;
}

/* global */

* {
    font-family: 'proxima_nova_rgregular', Helvetica, Arial, sans-serif;
}

/* utlity classes */

h1 {
    font-size: 1.875rem;
    line-height: 2.25rem;
}

h2 {
    font-size: 1.125rem;
    line-height: 1.375rem;
}

h3 {
    font-size: 1rem;
    line-height: 1.375rem;
}

p {
    font-size: 0.875rem;
    line-height: 1rem;
}

.grey-out {
    color: #1A1919;
    opacity: 0.5;
}

/* layout */

body {
    margin: 25px;
}

.wrapper {
    display: grid;
    grid-template-columns: 0.5fr repeat(9, minmax(auto, 1fr));
    grid-auto-rows: minmax(100px, auto);
    grid-template-areas: 
        "sn mn mn mn mn mn mn mn mn mn mn"
        "sn hd hd hd hd hd hd hd hd hd hd"
        "sn mc mc mc mc mc mc mc ac ac ac"
        "ft ft ft ft ft ft ft ft ft ft ft"
}

/* side nav bar*/

.sidenav {
    grid-area: sn;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    background-color: #042235;
    padding: 1rem 0;
}

.sidenav-item {
    color: #fff;
    opacity: 0.3;
    padding: 0.5rem;
    width: 100%;
    box-sizing: border-box;
    text-align: center;
    margin: 0;
}

.sidenav-item:last-child {
    margin-top: auto;
}

.sidenav-item:hover {
    background-color: #2995DA;
    opacity: 1;
}

/* top nav bar */

.main-nav {
    grid-area: mn;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    background-color: #fff;
    gap: 1rem;
    border-bottom: 1px solid #E2E2E2;
    vertical-align: middle;
}

.main-nav>h2 {
    height: 100%;
    /* vertical-align: middle; */
    text-align: center;
}

.main-nav>h2:first-child{
    border: 1px solid #E2E2E2;
}

.main-nav>div:nth-last-child(2) {
    margin-left: auto;
}

.inbox-btn {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
}

.notification-badge {
    position: absolute;
    top: -10px;
    right: -10px;
    width: 18px;
    height: 18px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 2px solid #fff;
    border-radius: 50%;
    background-color: #2995DA;
    color: #fff;
    font-size: 0.75rem;
    line-height: 0.75rem;
}

/* header */

.header {
    grid-area: hd;
    background-color: #fff;
}

.main-container {
    grid-area: mc;
    background-color: #E5E5E5;
}

.activity-container {
    grid-area: ac;
    background-color: #E5E5E5;
}

.footer {
    grid-area: ft;
    background-color: pink;
}

